--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@
                     <!--Editorial Section-->
                     <div id="editorial">
                         <div class="portfolio-item section-editorial">
-                            <h3><img src="/img/editorial.png" alt="">Editorial Design</h3>
+                            <h3><img src="img/editorial.png" alt="">Editorial Design</h3>
                             <p>Transforming words into stunning layouts with strong visual appeal.</p>
                             <div class="project">
                                 <div class="editorial-row">
