--- a/index.html
+++ b/index.html
@@ -440,13 +440,13 @@
                                     </div>
     
                                     <div class="editorial-box">
-                                        <h4>Bliss Newsletter</h4>
+                                        <h4>Le Gourmet</h4>
                                         <div class="editorial-row">
                                             <div class="margin">
-                                                <img src="img/Decorativas.webp" alt="Decorative">
+                                                <img src="img/Menu.webp" alt="Decorative">
                                             </div>
                                             <div>
-                                                <p>This newsletter is part of an editorial package designed for a college project. (2023)</p>
+                                                <p>This is a digital and interactive menu designed for a fictional sofisticated restaurant. (2024)</p>
                                                 <button class="btn btn-primary">
                                                     <ion-icon name="link"></ion-icon>
                                                 </button>
