--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                     <!--Illustration section-->
                     <div id="illustration">
                         <div class="portfolio-item">
-                            <h3><img src="img/illustration.png" alt=""> Illustration</h3>
+                            <h3><img src="img/illustration.webp" alt=""> Illustration</h3>
                             <p>Stories to life through creative visuals and digital techniques.</p>
                             <div class="project row">
                                 <div class="project-box col-md-2">
@@ -185,7 +185,7 @@
                     <!--Poster Section-->
                     <div id="poster">
                         <div class="portfolio-item section-poster">
-                            <h3><img src="img/posters.png" alt=""> Posters</h3>
+                            <h3><img src="img/posters.webp" alt=""> Posters</h3>
                             <p>Designed to grab attention and communicate messages effectively.</p>
                             <div class="project posters row">
                                 <div class="poster-box col-md-6">
@@ -461,7 +461,7 @@
                     <!--Web Section-->
                     <div id="web">
                         <div class="portfolio-item section-web">
-                            <h3><img src="img/web.png" alt=""> Web Design</h3>
+                            <h3><img src="img/web.webp" alt=""> Web Design</h3>
                             <p>Creating responsive and engaging websites for different needs.</p>
                             <div class="project webs-box">
                                 <div class="web-row row">
@@ -676,10 +676,10 @@
             <h4 class="mb-4">If you want to contact me, these are some good options</h4>
             <div class="contact-links d-flex justify-content-center gap-3 flex-wrap">
                 <a href="https://www.instagram.com/arianne_iba?igsh=ZnV1NHVnMDZkMHBz&utm_source=qr" class="contact-item d-flex align-items-center gap-2 text-white text-decoration-none">
-                    <img src="img/instagram.png" alt="Instagram" width="25"> arianne_iba
+                    <img src="img/instagram.webp" alt="Instagram" width="25"> arianne_iba
                 </a>
                 <a href="https://wa.link/yu0e9r" target="blank" class="contact-item d-flex align-items-center gap-2 text-white text-decoration-none">
-                    <img src="img/teléfono.png" alt="Phone" width="25"> +591 77646010
+                    <img src="img/teléfono.webp" alt="Phone" width="25"> +591 77646010
                 </a>
                 <a href="https://mail.google.com" target="blank" class="contact-item d-flex align-items-center gap-2 text-white text-decoration-none">
                     <img src="img/correo.webp" alt="Email" width="25"> ibanezaponte@gmail.com
