--- a/index.html
+++ b/index.html
@@ -447,9 +447,11 @@
                                             </div>
                                             <div>
                                                 <p>This is a digital and interactive menu designed for a fictional sofisticated restaurant. (2024)</p>
-                                                <button class="btn btn-primary">
-                                                    <ion-icon name="link"></ion-icon>
-                                                </button>
+                                                <a href="https://files.fm/u/nbq3xmb4zw#/view/gmkbyx9zwv" target="_blank" rel="noopener noreferrer">
+                                                    <button class="btn btn-primary">
+                                                        <ion-icon name="link"></ion-icon>
+                                                    </button>
+                                                </a>
                                             </div>
                                         </div>
                                     </div>
