--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
                             <li><a class="dropdown-item" href="#poster">Posters</a></li>
                             <li><a class="dropdown-item" href="#editorial">Editorial Design</a></li>
                             <li><a class="dropdown-item" href="#web">Web Design</a></li>
+                            <li><a class="dropdown-item" href="#internship">Internship</a></li>
                             <li><a class="dropdown-item" href="#animation">Animation</a></li>
                         </ul>
                     </li>
