--- a/index.html
+++ b/index.html
@@ -567,7 +567,7 @@
                                                 <img src="img/google-banners.webp" class="card-img-top" alt="...">
                                                 <div class="card-body">
                                                     <h5 class="card-title">Bagó Google Banners</h5>
-                                                    <p class="card-text">Refrianex, Colnatur and Axion animated google banners.</p>
+                                                    <p class="card-text">Refrianex, Colnatur and Axion animated google banners. Click on "View Online" to watch more.</p>
                                                     <a href="https://drive.google.com/drive/folders/1RuU320F-55br_Wmzj8OHDPpGOm2fz9-F?usp=sharing" target="_blank" class="btn btn-primary">
                                                     <ion-icon name="link-outline"></ion-icon> View Online
                                                     </a>
@@ -601,7 +601,7 @@
                                                 <img src="img/carissa.webp" class="card-img-top" alt="...">
                                                 <div class="card-body">
                                                     <h5 class="card-title">Carissa RRSS Posts</h5>
-                                                    <p class="card-text"></p>
+                                                    <p class="card-text">Click on "View Online" to watch more.</p>
                                                     <a href="https://drive.google.com/drive/folders/1g4fsK0VCaQitKSloZ83UBqE9nBRKV6Ck?usp=drive_link" target="_blank" class="btn btn-primary">
                                                     <ion-icon name="link-outline"></ion-icon> View Online
                                                     </a>
@@ -634,7 +634,7 @@
                                                 <img src="img/salutaciones.webp" class="card-img-top" alt="...">
                                                 <div class="card-body">
                                                     <h5 class="card-title">Salutaciones</h5>
-                                                    <p class="card-text"></p>
+                                                    <p class="card-text">Click on "View Online" to watch more.</p>
                                                     <a href="https://drive.google.com/drive/folders/1Tyn69Hj91crTF_6XWl9Uy5jiW66p_rGw?usp=sharing" target="_blank" class="btn btn-primary">
                                                     <ion-icon name="link-outline"></ion-icon> View Online
                                                     </a>
@@ -876,4 +876,5 @@
 
 </body>
 </html>
+
 
