--- a/index.html
+++ b/index.html
@@ -507,8 +507,8 @@
                     <div id="internship" class="internship-section w-100">
                         <div class="custom-container-fluid">
                             <h3><img src="img/internship-icon.png" alt="">Internship Projects</h3>
-                            <p>In the first semester of 2025 I had an internship in a publicity agency named (FOBO). 
-                                These are some real agency projects I worked in during that time."</p>
+                            <p>In 2025 I had an internship in FOBO (publicity agency) for 8 months. 
+                                These are some real agency projects I worked in during that time.</p>
                             <div id="internshipCarousel" class="carousel slide" data-bs-ride="carousel">
                                 <div class="carousel-inner">
 
@@ -876,5 +876,6 @@
 
 </body>
 </html>
+
 
 
